fixed the huge ugly checkboxes on ios and made public and local custom feeds easier to use

--- a/src/app/resources/less/app.less
+++ b/src/app/resources/less/app.less
@@ -114,7 +114,8 @@
 	-ms-transform: scale(1.5); 
 	-o-transform: scale(1.5); 
 	margin-top: 5px; 
-	margin-right: 5px
+	margin-right: 5px;
+	vertical-align: -3px;
 }
 
 .dj_iphone .saveQueryCheckBox {
@@ -123,7 +124,8 @@
 	-ms-transform: scale(1.2); 
 	-o-transform: scale(1.2); 
 	margin-top: 5px; 
-	margin-right: 5px
+	margin-right: 5px;
+	vertical-align: -3px;
 }
 
 .dj_phone .saveDijitDialog {
@@ -242,6 +244,18 @@
 	-o-transform: scale(1.3);
 }
 
+.dj_ios .radioCheckBox {
+	-webkit-transform: scale(1.7);
+	-moz-transform: scale(1.7);
+	-ms-transform: scale(1.7);
+	-o-transform: scale(1.7);
+	margin-left: 11px;
+	margin-right: 8px;
+	margin-top: 6px;
+	height: 12px;
+	width: 12px;
+}
+
 .radioCheckBox {
 	-webkit-transform: scale(2.2);
 	-moz-transform: scale(2.2);
@@ -250,6 +264,8 @@
 	margin-left: 11px;
 	margin-right: 8px;
 	margin-top: 6px;
+	height: 12px;
+	width: 12px;
 }
 
 .dj_iphone .radioCheckBox {
@@ -260,6 +276,8 @@
 	margin-left: 7px;
 	margin-right: 4px;
 	margin-top: 6px;
+	height: 15px;
+	width: 15px;
 }
 
 .verticalIconClass {
